# horus

./: .flake8  .gitignore  README.md  lint.sh  pyproject.toml  test.sh
.github/workflows/: ci.yml
src/horus/data_interaces/: networkx_graph_data_interface.py
src/horus/nodes/: config_vis_networkx.py  matplotlib_vis_networkx.py  plotly_utils.py  project_logging.py  utils.py
src/horus/pipelines/: dummy_pipeline.py  matplotlib_vis_networkx_pipeline.py  plotly_viz_networkx_pipeline.py  pygraphviz_networkx_pipeline.py
src/tests/: conftest.py
src/tests/integration/pipelines/: test_plotly_viz_networkx_pipeline.py
src/tests/unit/nodes/: test_networkx_graph_data_interface.py  test_project_logging.py
tests/: conftest.py
tests/data/: example_graph.json
tests/integration/: test_matplotlib_vis_networkx_pipeline.py  test_pygraphviz_networkx_pipeline.py
tests/unit/nodes/: test_matplotlib_vis_networkx.py
